# SkyProBetaOOP

./: README.md  pyproject.toml
models/: Category.py  LawnGrass.py  Product.py  ReportMixin.py  Smartphone.py
src/: functions.py  main.py  settings.py
tests/: test_Category.py  test_Product.py  test_functions.py
